--- a/config/base.cfg
+++ b/config/base.cfg
@@ -120,11 +120,11 @@ size = 0              # Number of second-level TLB entries
 associativity = 1     # S-TLB associativity
 
 [perf_model/l1_icache]
-perfect = false
+perfect = true
 passthrough = false
 coherent = true
 cache_block_size = 64
-cache_size = 32 # in KB
+cache_size = 16 #32 # in KB  anu
 associativity = 4
 address_hash = mask
 replacement_policy = lru
@@ -138,10 +138,10 @@ next_level_read_bandwidth = 0 # Read bandwidth to next-level cache, in bits/cycl
 prefetcher = none
 
 [perf_model/l1_dcache]
-perfect = false
+perfect = true
 passthrough = false
 cache_block_size = 64
-cache_size = 32 # in KB
+cache_size = 16 #32 # in KB  anu
 associativity = 4
 address_hash = mask
 replacement_policy = lru
@@ -154,31 +154,6 @@ shared_cores = 1      # Number of cores sharing this cache
 outstanding_misses = 0
 next_level_read_bandwidth = 0 # Read bandwidth to next-level cache, in bits/cycle, 0 = infinite
 prefetcher = none
-
-[perf_model/l2_cache]
-perfect = false
-passthrough = false
-cache_block_size = 64 # in bytes
-cache_size = 256 # in KB
-associativity = 8
-address_hash = mask
-replacement_policy = lru
-data_access_time = 9
-tags_access_time = 3  # This is just a guess for Penryn
-perf_model_type = parallel
-writeback_time = 0    # Extra time required to write back data to a higher cache level
-dvfs_domain = core    # Clock domain: core or global
-shared_cores = 1      # Number of cores sharing this cache
-prefetcher = none     # Prefetcher type
-next_level_read_bandwidth = 0 # Read bandwidth to next-level cache, in bits/cycle, 0 = infinite
-
-[perf_model/l3_cache]
-perfect = false
-passthrough = false
-
-[perf_model/l4_cache]
-perfect = false
-passthrough = false
 
 [perf_model/llc]
 evict_buffers = 8
@@ -220,9 +195,13 @@ home_lookup_param = 6                     # Granularity at which the directory i
 directory_cache_access_time = 10          # Tag directory lookup time (in cycles)
 locations = dram                          # dram: at each DRAM controller, llc: at master cache locations, interleaved: every N cores (see below)
 interleaving = 1                          # N when locations=interleaved
+locations = llc
 
 [perf_model/dram_directory/limitless]
 software_trap_penalty = 200               # number of cycles added to clock when trapping into software (pulled number from Chaiken papers, which explores 25-150 cycle penalties)
+
+[perf_model/cache]
+levels = 1
 
 [perf_model/dram]
 type = constant                           # DRAM performance model type: "constant" or a "normal" distribution
@@ -243,8 +222,44 @@ enabled = false
 enabled = true
 type = history_list
 
+[perf_model/l2_cache]
+perfect = false
+passthrough = false
+cache_block_size = 64 # in bytes
+cache_size = 256 # in KB
+associativity = 8
+address_hash = mask
+replacement_policy = lru
+data_access_time = 0
+tags_access_time = 3  # This is just a guess for Penryn
+perf_model_type = parallel
+writeback_time = 0    # Extra time required to write back data to a higher cache level
+dvfs_domain = core    # Clock domain: core or global
+shared_cores = 1      # Number of cores sharing this cache
+prefetcher = none     # Prefetcher type
+next_level_read_bandwidth = 0 # Read bandwidth to next-level cache, in bits/cycle, 0 = infinite
+
+[perf_model/l3_cache]
+perfect = false
+passthrough = false
+
+[perf_model/l4_cache]
+perfect = false
+passthrough = false
+
 [perf_model/nuca]
-enabled = false
+enabled = true
+cache_size = 8192       # In KB junk ladu anu
+associativity = 16
+address_hash = mask
+replacement_policy = lru
+tags_access_time = 2    # In cycles
+data_access_time = 8    # In cycles, parallel with tag access
+bandwidth = 64          # In GB/s
+
+[perf_model/nuca/queue_model]
+enabled = true
+type = history_list
 
 [perf_model/sync]
 reschedule_cost = 0 # In nanoseconds
@@ -260,8 +275,8 @@ system_model = magic
 collect_traffic_matrix = false
 
 [network/emesh_hop_counter]
-link_bandwidth = 64 # In bits/cycles
-hop_latency = 2
+link_bandwidth = 256 # In bits/cycles
+hop_latency = 6
 
 [network/emesh_hop_by_hop]
 dvfs_domain = global  # Clock domain: core or global
@@ -332,7 +347,7 @@ type = open
 
 [scheduler/open]
 logic = first_unused #Set the scheduling algorithm used. Currently supported: first_unused, PCGov.
-#logic = PCGov # cfg:PCGov
+#logic = PCGov
 epoch = 10000000	#Set the scheduling epoch in ns; granularity at which open scheduler is called.
 queuePolicy = FIFO	#Set the queuing policy. Currently support: FIFO, priority.
 distribution = poisson #Set the arrival distribution of open workload. Currently supported: uniform, poisson, explicit
@@ -341,7 +356,7 @@ arrivalRate = 1	#Set the rate at which tasks arrive together.
 arrivalInterval = 10000000 #Set the (expected) interval between two arrivals in nano seconds. 
 explicitArrivalTimes=0,0,0,0
 core_mask = 1             # Mask of cores on which threads can be scheduled (default: 1, all cores)
-preferred_core = -1  # -1 is used to detect the end of the preferred order
+preferred_core = 0,7,56,63,-1  # -1 is used to detect the end of the preferred order
 randompriority = true # false=explicitly set priority, true=randomly assign priority
 explicitPriorityValues = 1,2,3,4,5,6,7
 
@@ -350,19 +365,19 @@ logic = off  # set the migration algorithm used. Possible algorithms: off (no mi
 epoch = 1000000
 
 [scheduler/open/dvfs]
-logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, tsp, fixedPower, testStaticPower, PCGov
+#logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, tsp, fixedPower, testStaticPower, PCGov
 logic = maxFreq  # cfg:maxFreq
 #logic = testStaticPower  # cfg:testStaticPower
-#logic = PCGov # cfg:PCGov
+#logic = PCGov 
 min_frequency = 1.0
 max_frequency = 4.0
 #max_frequency = 1.0  # cfg:1.0GHz
 #max_frequency = 2.0  # cfg:2.0GHz
 #max_frequency = 3.0  # cfg:3.0GHz
-#max_frequency = 4.0  # cfg:4.0GHz
+max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
-#dvfs_epoch = 1000000 # cfg:slowDVFS
+dvfs_epoch = 1000000 # cfg:slowDVFS
 #dvfs_epoch = 250000  # cfg:mediumDVFS
 #dvfs_epoch = 100000  # cfg:fastDVFS
 reserved_cores_are_active = false
@@ -436,12 +451,12 @@ floorplan = ../benchmarks/8x8_manycore.flp
 thermal_model = ../benchmarks/8x8_eigendata.bin
 ambient_temperature = 45
 max_temperature = 80
-inactive_power = 0.27
-tdp = 100
+inactive_power = 0.2
+tdp = 30
 
 
 [power]
-technology_node = 14 # nm
+technology_node = 10 # nm
 vdd = 0  # will be overwritten in energystats.py
 static_frequency_a = 1 #in GHz
 static_frequency_b = 4 #in GHz
